--- a/TherapyZone.html
+++ b/TherapyZone.html
@@ -1,27 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The web site of isakmedia</title>
+    <title>Therapy Zone</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body class="therapyBody">
+    <!-- SCM Music Player https://www.scmplayer.net -->
+<script type="text/javascript" src="https://www.scmplayer.net/script.js" data-config="{
+  'skin':'skins/black/skin.css',
+  'volume':50,
+  'autoplay':false,
+  'shuffle':false,'repeat':1,
+  'placement':'top',
+  'showplaylist':false,
+  'playlist':
+    [
+      {'title':'m83 - Lower your eyelids to die with the sun','url':'https://www.youtube.com/watch?v=u_u5iCHi0Jo'},
+      {'title':'Orbital - One perfect sunrise' , 'url':'https://www.youtube.com/watch?v=KGXgCuTCrj8'},
+      {'title':'Aphex Twin - Stone in focus' , 'url':'https://www.youtube.com/watch?v=q86g1aop6a8'},
+      {'title':' We Are All Astronauts - Ether' , 'url':'https://www.youtube.com/watch?v=-fFbeSykaJk'},
+      {'title':' Katahimikan - Shimmer' , 'url':'https://www.youtube.com/watch?v=PtCByTuJ8xY'},
+     
+    ]}">
+</script>
+
+
     <main id="rainBox">
         
         <div class="center-wrapper">
-          <div class="rain-box">
-            <!-- example drop, should add siblings to it -->
-              <div class="drop"></div> 
-          </div>
-        <div class="content-box">
-            <h2>R e l a x</h2>
-            <div id="posterImg" class="poster">
-            <img src="/with-lights.gif" alt="animated stalenhag image of two hovering ships in the distance"/>
+            <div class="rain-box">
+              <!-- example drop, should add siblings to it -->
+              <!-- <div class="drop"></div>  -->
             </div>
-        </div>
+            <div class="content-box">
+              <h2>R e l a x</h2>
+              <div id="posterImg" class="poster">
+              <img src="/with-lights.gif" alt="animated stalenhag image of two hovering ships in the distance"/>
+              </div>
+            </div>
+          <div id="player-container" class="player-box"></div>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="/bndex.js"></script>
   </body>
 </html>
+
+
