keep on playing. nothing is bad code, everything is fun

--- a/TherapyZone.html
+++ b/TherapyZone.html
@@ -20,9 +20,10 @@
       {'title':'m83 - Lower your eyelids to die with the sun','url':'https://www.youtube.com/watch?v=u_u5iCHi0Jo'},
       {'title':'Orbital - One perfect sunrise' , 'url':'https://www.youtube.com/watch?v=KGXgCuTCrj8'},
       {'title':'Aphex Twin - Stone in focus' , 'url':'https://www.youtube.com/watch?v=q86g1aop6a8'},
-      {'title':' We Are All Astronauts - Ether' , 'url':'https://www.youtube.com/watch?v=-fFbeSykaJk'},
-      {'title':' Katahimikan - Shimmer' , 'url':'https://www.youtube.com/watch?v=PtCByTuJ8xY'},
-     
+      {'title':'We Are All Astronauts - Ether' , 'url':'https://www.youtube.com/watch?v=-fFbeSykaJk'},
+      {'title':'Katahimikan - Shimmer' , 'url':'https://www.youtube.com/watch?v=PtCByTuJ8xY'},
+      {'title':'Yehezkel Raz - Flight of the inner bird' , 'url':'https://www.youtube.com/watch?v=d-aWIXPPQAk'},
+
     ]}">
 </script>
 
